--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".SignupActivity" />
-        <activity android:name=".GrabOrder"></activity>
+        <activity android:name=".GrabOrderActivity"></activity>
     </application>
 
 </manifest>
